# NowPlayingAPI

./: MCP_SERVER.md  README.md  main.py  mcp_server.py  pyproject.toml
src/nowplayingapi/: config.py  models.py  platform_wrapper.py  services.py
