[project]
name = "now-playing-api"
version = "0.1.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[all]>=0.116.1",
    "pycaw>=20240210",
    "pydantic>=2.11.7",
    "pywin32>=311; sys_platform == 'win32'",
    "mcp>=1.0.0",  # Model Context Protocol server support
]
